k8s/namespace.yml
---
# 创建Namespace，所有的动作和资源都隔离在这个命名空间
apiVersion: v1
kind: Namespace
metadata:
  name: asc-system
