k8s/gateway-ingress-controller.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-ingress-controller
  namespace: intern-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-ingress-controller
  template:
    metadata:
      labels:
        app: gateway-ingress-controller
    spec:
      serviceAccountName: service-account
      containers:
      - image: zhaodockerhub/gateway-as-ingress:v3.1
        imagePullPolicy: Always
        name: gateway-ingress-controller
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "300Mi"
          requests:
            memory: "300Mi"
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTPS
          initialDelaySeconds: 15
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
            scheme: HTTPS
          initialDelaySeconds: 30
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - name: gateway-tls-mount
          mountPath: "/etc/tls"
      volumes:
        - name: gateway-tls-mount
          secret:
            secretName: asc-test-net
---
kind: Service
apiVersion: v1
metadata:
  name: gateway-ingress-controller
  namespace: intern-project
  labels:
    app: gateway-ingress-controller
spec:
  selector:
    app: gateway-ingress-controller
  ports:
  - protocol: TCP
    port: 8080
    name: http
