k8s/simple-example.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-example
  namespace: intern-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-example
  template:
    metadata:
      labels:
        app: simple-example
    spec:
      containers:
      - image: kennethreitz/httpbin
        name: httpbin
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
          requests:
            memory: "128Mi"
        readinessProbe:
          httpGet:
            path: /anything
            port: 80
          initialDelaySeconds: 3
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /anything
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
---
kind: Service
apiVersion: v1
metadata:
  name: simple-example
  namespace: intern-project
  labels:
    app: simple-example
spec:
  selector:
    app: simple-example
  ports:
  - protocol: TCP
    port: 80
    name: http
