k8s/default-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: default-backend
  namespace: gateway-as-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default-backend
  template:
    metadata:
      labels:
        app: default-backend
    spec:
      containers:
      - image: kennethreitz/httpbin
        name: httpbin
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "386Mi"
          requests:
            memory: "386Mi"
        readinessProbe:
          httpGet:
            path: /anything
            port: 80
          initialDelaySeconds: 3
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /anything
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
---
kind: Service
apiVersion: v1
metadata:
  name: default-backend
  namespace: gateway-as-ingress
  labels:
    app: default-backend
spec:
  selector:
    app: default-backend
  ports:
  - protocol: TCP
    port: 80
    name: http
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: default-backend
  namespace: gateway-as-ingress
  annotations:
    kubernetes.io/ingress.class: spring.cloud.gateway
spec:
  backend:
    serviceName: httpbin
    servicePort: 80
