k8s/name-virtual-host.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: name-virtual-host
  namespace: gateway-ingress-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: name-virtual-host
  template:
    metadata:
      labels:
        app: name-virtual-host
    spec:
      containers:
      - image: kennethreitz/httpbin
        name: httpbin
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "128Mi"
          requests:
            memory: "128Mi"
        readinessProbe:
          httpGet:
            path: /anything
            port: 80
          initialDelaySeconds: 3
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /anything
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
---
kind: Service
apiVersion: v1
metadata:
  name: name-virtual-host
  namespace: gateway-ingress-v1
  labels:
    app: name-virtual-host
spec:
  selector:
    app: name-virtual-host
  ports:
  - protocol: TCP
    port: 80
    name: http
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: name-virtual-host
  namespace: gateway-ingress-v1
  annotations:
    kubernetes.io/ingress.class: spring.cloud.gateway
spec:
  rules:
  - host: name.virtual.com
    http:
      paths:
      - path: /anything/foo
        backend:
          serviceName: name-virtual-host
          servicePort: 80
  - host: virtual.name.com
    http:
      paths:
      - path: /anything/bar
        backend:
          serviceName: name-virtual-host
          servicePort: 80
