k8s/simple-fanout.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-fanout
  namespace: gateway-as-ingress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-fanout
  template:
    metadata:
      labels:
        app: simple-fanout
    spec:
      containers:
      - image: kennethreitz/httpbin
        name: httpbin
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "386Mi"
          requests:
            memory: "386Mi"
        readinessProbe:
          httpGet:
            path: /anything
            port: 80
          initialDelaySeconds: 3
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /anything
            port: 80
          initialDelaySeconds: 10
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
---
kind: Service
apiVersion: v1
metadata:
  name: simple-fanout
  namespace: gateway-as-ingress
  labels:
    app: simple-fanout
spec:
  selector:
    app: simple-fanout
  ports:
  - protocol: TCP
    port: 80
    name: http
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: simple-fanout
  namespace: gateway-as-ingress
  annotations:
    kubernetes.io/ingress.class: spring.cloud.gateway
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /anything/simple-fanout/foo
        backend:
          serviceName: simple-fanout
          servicePort: 80
      - path: /anything/simple-fanout/bar
        backend:
          serviceName: simple-fanout
          servicePort: 80
